@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmimonitoring-argp.c,v 1.19 2008-07-14 01:22:41 chu11 Exp $
+ *  $Id: ipmimonitoring-argp.c,v 1.19.4.1 2008-08-22 00:02:45 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -73,7 +73,7 @@ static struct argp_option cmdline_options[] =
     ARGP_COMMON_OPTIONS_OUTOFBAND,
     ARGP_COMMON_OPTIONS_AUTHENTICATION_TYPE,
     ARGP_COMMON_OPTIONS_CIPHER_SUITE_ID,
-    ARGP_COMMON_OPTIONS_PRIVILEGE_LEVEL_USER,
+    ARGP_COMMON_OPTIONS_PRIVILEGE_LEVEL_OPERATOR,
     ARGP_COMMON_OPTIONS_WORKAROUND_FLAGS,
     ARGP_COMMON_SDR_OPTIONS,
     ARGP_COMMON_HOSTRANGED_OPTIONS,
@@ -94,6 +94,8 @@ static struct argp_option cmdline_options[] =
      "Show sensors belonging to a specific group.", 35}, 
     {"sensors",        SENSORS_KEY, "SENSORS-LIST", 0, 
      "Show sensors by record id.  Accepts space or comma separated lists", 36}, 
+    {"bridge-sensors", BRIDGE_SENSORS_KEY, NULL, 0,
+     "Bridge addresses to read non-BMC owned sensors.", 37},
     { 0 }
   };
 
@@ -167,6 +169,9 @@ cmdline_parse (int key, char *arg, struct argp_state *state)
           tok = strtok(NULL, " ,");
         }
       break;
+    case BRIDGE_SENSORS_KEY:
+      cmd_args->bridge_sensors = 1;
+      break;
     case ARGP_KEY_ARG:
       /* Too many arguments. */
       argp_usage (state);
@@ -223,6 +228,8 @@ _ipmimonitoring_config_file_parse(struct ipmimonitoring_arguments *cmd_args)
       cmd_args->groups_wanted++;
       cmd_args->groups_length = config_file_data.groups_length;
     }
+  if (config_file_data.bridge_sensors_count)
+    cmd_args->bridge_sensors = config_file_data.bridge_sensors;
 }
 
 void 
@@ -230,7 +237,7 @@ ipmimonitoring_argp_parse (int argc, char **argv, struct ipmimonitoring_argument
 {
   int i;
 
-  init_common_cmd_args_user (&(cmd_args->common));
+  init_common_cmd_args_operator (&(cmd_args->common));
   init_sdr_cmd_args (&(cmd_args->sdr));
   init_hostrange_cmd_args (&(cmd_args->hostrange));
   cmd_args->verbose = 0;
@@ -248,6 +255,7 @@ ipmimonitoring_argp_parse (int argc, char **argv, struct ipmimonitoring_argument
          '\0', 
          sizeof(unsigned int)*IPMIMONITORING_MAX_RECORD_IDS);
   cmd_args->sensors_length = 0;
+  cmd_args->bridge_sensors = 0;
 
   memset(&(cmd_args->conf), '\0', sizeof(struct ipmi_monitoring_ipmi_config));
   cmd_args->ipmimonitoring_flags = 0;
