@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmi_monitoring_sensor_reading.c,v 1.28.2.1 2008-08-21 23:14:05 chu11 Exp $
+ *  $Id: ipmi_monitoring_sensor_reading.c,v 1.28.2.2 2008-08-22 00:02:46 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -446,16 +446,6 @@ _get_sensor_reading(ipmi_monitoring_ctx_t c,
 
   slave_address = (sensor_owner_id << 1) | sensor_owner_id_type;
 
-  if (slave_address != IPMI_SLAVE_ADDRESS_BMC)
-    {
-      /* sensor reading not available.  Tell the caller to store this
-       * as an unreadable sensor
-       */
-      IPMI_MONITORING_DEBUG(("sensor slave address is not BMC"));
-      rv = 0;
-      goto cleanup;
-    }
-
   if (!(obj_cmd_rs = Fiid_obj_create(c, tmpl_cmd_get_sensor_reading_rs)))
     goto cleanup;
      
@@ -466,31 +456,85 @@ _get_sensor_reading(ipmi_monitoring_ctx_t c,
     return -1;
   *sensor_number = val;
 
-  if (ipmi_cmd_get_sensor_reading(c->ipmi_ctx, 
-                                  *sensor_number, 
-                                  obj_cmd_rs) < 0)
+  if (slave_address == IPMI_SLAVE_ADDRESS_BMC)
     {
-      if (ipmi_check_completion_code(obj_get_sensor_reading_rs,
-                                     IPMI_COMP_CODE_NODE_BUSY) == 1)
+      if (ipmi_cmd_get_sensor_reading(c->ipmi_ctx, 
+                                      *sensor_number, 
+                                      obj_cmd_rs) < 0)
         {
-          /* The sensor is busy.  Tell the caller to store this as an
-           * unreadable sensor
-           */
-          rv = 0;
+          if (ipmi_check_completion_code(obj_cmd_rs,
+                                         IPMI_COMP_CODE_NODE_BUSY) == 1)
+            {
+              /* The sensor is busy.  Tell the caller to store this as an
+               * unreadable sensor
+               */
+              rv = 0;
+              goto cleanup;
+            }
+
+          if (ipmi_check_completion_code(obj_cmd_rs, 
+                                         IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
+            {
+              /* A sensor listed by the SDR is not present.  Tell the
+               * caller to store this as an unreadable sensor
+               */
+              rv = 0;
+              goto cleanup;
+            }
+
+          ipmi_monitoring_ipmi_ctx_error_convert(c);
           goto cleanup;
         }
-      if (ipmi_check_completion_code(obj_cmd_rs, 
-                                     IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
+    }
+  else if (sensor_reading_flags & IPMI_MONITORING_SENSOR_READING_FLAGS_BRIDGE_SENSORS)
+    {
+      if (ipmi_cmd_get_sensor_reading_ipmb (c->ipmi_ctx,
+                                            slave_address,
+                                            *sensor_number,
+                                            obj_cmd_rs) < 0)
         {
-          /* A sensor listed by the SDR is not present.  Tell the
-           * caller to store this as an unreadable sensor
-           */
-          rv = 0;
+          if (ipmi_ctx_errnum (c->ipmi_ctx) == IPMI_ERR_COMMAND_INVALID_FOR_SELECTED_INTERFACE)
+            {
+              /* sensor cannot be reached, consider it an unreadable sensor */
+              IPMI_MONITORING_DEBUG(("sensor slave address cannot be reached"));
+              rv = 0;
+              goto cleanup;
+            }
+
+          if (ipmi_check_completion_code(obj_cmd_rs,
+                                         IPMI_COMP_CODE_NODE_BUSY) == 1)
+            {
+              /* The sensor is busy.  Tell the caller to store this as an
+               * unreadable sensor
+               */
+              rv = 0;
+              goto cleanup;
+            }
+
+          if (ipmi_check_completion_code(obj_cmd_rs, 
+                                         IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
+            {
+              /* A sensor listed by the SDR is not present.  Tell the
+               * caller to store this as an unreadable sensor
+               */
+              rv = 0;
+              goto cleanup;
+            }
+
+          ipmi_monitoring_ipmi_ctx_error_convert(c);
           goto cleanup;
         }
-      ipmi_monitoring_ipmi_ctx_error_convert(c);
+    }
+  else
+    {
+      /* sensor reading not available.  Tell the caller to store this
+       * as an unreadable sensor
+       */
+      IPMI_MONITORING_DEBUG(("sensor slave address is not BMC"));
+      rv = 0;
       goto cleanup;
     }
+
 
   if (Fiid_obj_get(c,
                    obj_cmd_rs,
